# logic-solver

./: .bazelrc  .gitignore  BUILD  BUILD.benchmark  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  base-bazelrc  class_permuter_test.cc  cleanup.sh  cmake.bzl  diff_bazelrc_test.sh  dracula_and_friends.cc  dracula_and_friends.proto  fbtd.patch  foo  logic-solver.code-workspace  nytkenken20240504_large.cc  nytkenken20240504_small.cc  pprof  puzzle_main.cc  puzzle_test.cc  run_all_benchmarks.sh  six_fearsome_heroes.cc  six_fearsome_heroes.proto  solution_permuter_test.cc  solver.cc  solver.h  sudoku.cc  sudoku.h  sudoku_nyt20171202.cc  swimming_pool.cc  swimming_pool.proto  update_workspace.date  update_workspace.pl
ken_ken/: BUILD  board.cc  board.h  conceptis_puzzles.cc  grid.cc  grid.h  ken_ken.cc  ken_ken.h  nytkenken20240504_large.cc  nytkenken20240504_small.cc
proto/: BUILD  dracula_and_friends.cc  dracula_and_friends.proto  proto_problem.cc  proto_problem.h  six_fearsome_heroes.cc  six_fearsome_heroes.proto  swimming_pool.cc  swimming_pool.proto
puzzle/: BUILD  active_set.cc  active_set.h  active_set_bit_vector.cc  active_set_bit_vector.h  active_set_builder.cc  active_set_builder.h  active_set_builder_benchmark.cc  active_set_builder_test.cc  active_set_pair.cc  active_set_pair.h  active_set_pair_test.cc  active_set_run_length.cc  active_set_run_length.h  active_set_run_position.cc  active_set_run_position.h  active_set_test.cc  all_match.h  all_match_test.cc  bad_deps_test.sh  benchmark_main.cc  brute_solution_permuter.cc  brute_solution_permuter.h  brute_solution_permuter_test.cc  class_pair_selectivity.h  class_permuter.cc  class_permuter.h  class_permuter_benchmark.cc  class_permuter_factorial_radix.cc  class_permuter_factorial_radix.h  class_permuter_factorial_radix_delete_tracking.cc  class_permuter_factorial_radix_delete_tracking.h  class_permuter_factory.cc  class_permuter_factory.h  class_permuter_steinhaus_johnson_trotter.cc  class_permuter_steinhaus_johnson_trotter.h  class_permuter_test.cc  cropped_solution_permuter.cc  cropped_solution_permuter.h  cropped_solution_permuter_test.cc  (+40 more)
puzzle/active_set/: BUILD  active_set.h  active_set_test.cc  bit_vector.cc  bit_vector.h  pair.cc  pair.h  pair_test.cc  run_length.cc  run_length.h  run_position.cc
puzzle/base/: BUILD  all_match.h  all_match_test.cc  descriptors.h  owned_solution.h  position.h  profiler.cc  profiler.h  solution.cc  solution.h  solution_filter.h  solution_view.cc  solution_view.h
puzzle/class_permuter/: BUILD  class_permuter.cc  class_permuter.h  class_permuter_benchmark.cc  class_permuter_test.cc  factorial_radix.cc  factorial_radix.h  factorial_radix_delete_tracking.cc  factorial_radix_delete_tracking.h  factory.cc  factory.h  steinhaus_johnson_trotter.cc  steinhaus_johnson_trotter.h  value_skip_to_active_set.cc  value_skip_to_active_set.h  value_skip_to_active_set_test.cc
puzzle/solution_permuter/: BUILD  all_match_test.cc  allowed_value_solution_permuter.cc  allowed_value_solution_permuter.h  brute_solution_permuter.cc  brute_solution_permuter.h  brute_solution_permuter_test.cc  class_pair_selectivity.h  filter_to_active_set.cc  filter_to_active_set.h  filter_to_active_set_benchmark.cc  filter_to_active_set_test.cc  filtered_solution_permuter.cc  filtered_solution_permuter.h  filtered_solution_permuter_test.cc  mutable_solution.h  pair_filter_burn_down.cc  pair_filter_burn_down.h  solution_permuter.cc  solution_permuter.h  solution_permuter_factory.cc  solution_permuter_factory.h  value_skip_to_active_set.cc  value_skip_to_active_set.h  value_skip_to_active_set_test.cc
sudoku/: BUILD  base.cc  base.h  conceptis_puzzles.cc  estimate_sudoku_boards.cc  greater_than_sudoku.cc  greater_than_sudoku.h  killer_sudoku.cc  killer_sudoku.h  ksogt20200601.cc  line_board.cc  line_board.h  multi_line.cc  multi_line.test  multi_line_test.cc  nyt20171202.cc  nyt20180101easy.cc  nyt20180102medium.cc  nyt20181019easy.cc  nyt20181019hard.cc  simple.test  single_line.cc  single_line_test.cc  sudoku.bzl  sudoku.cc  sudoku.h  sudoku_test.cc
thread/: BUILD  executor.h  future.h  future_test.cc  inline_executor.h  inline_executor_test.cc  pool.h  pool_test.cc
