###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_github_google_benchmark")
bazel_dep(name = "re2", version = "2024-06-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_proto", version = "6.0.0.bcr.1")
bazel_dep(
    name = "protobuf",
    version = "27.0",
    repo_name = "com_google_protobuf"
)
bazel_dep(name = "com_monkeynova_base_workspace")
bazel_dep(name = "com_monkeynova_gunit_main")
bazel_dep(name = "com_google_file_based_test_driver")

git_override(
   module_name = "com_monkeynova_base_workspace",
   remote = "https://github.com/monkeynova/base-workspace.git",
   # branch = "main",
   commit = "c3a4f468c71fe823e846754f0fd15be5a9c730d8",
)

git_override(
    module_name = "com_monkeynova_gunit_main",
    remote = "https://github.com/monkeynova/gunit-main.git",
    # branch = "main",
    commit = "33b6b882e19d8a2fd835f18184c3c7f1d19cfe25",
)

git_override(
    module_name = "com_google_file_based_test_driver",
    remote = "https://github.com/google/file-based-test-driver.git",
    commit = "fd7661b168f640f68da39f97dad26e426eb6c339",
    patches = ["fbtd.patch"],
    patch_strip = 1,
)