###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(
    name = "protobuf",
    version = "29.0",
    # https://github.com/google/riegeli/issues/32
    # no_update = 1,
)
bazel_dep(name = "com_monkeynova_base_workspace")
bazel_dep(name = "com_monkeynova_gunit_main")
bazel_dep(name = "com_google_file_based_test_driver")
bazel_dep(name = "rules_cc", version = "0.1.1")

git_override(
   module_name = "com_monkeynova_base_workspace",
   remote = "https://github.com/monkeynova/base-workspace.git",
   # branch = "main",
   commit = "49867f63b311391d6ccdaf99b7e5cbc5b9750120",
)

git_override(
    module_name = "com_monkeynova_gunit_main",
    remote = "https://github.com/monkeynova/gunit-main.git",
    # branch = "main",
    commit = "69f9eb1865efdfdca02103fd7c87fe973777f01c",
)

git_override(
    module_name = "com_google_file_based_test_driver",
    remote = "https://github.com/google/file-based-test-driver.git",
    commit = "fd7661b168f640f68da39f97dad26e426eb6c339",
    patches = ["fbtd.patch"],
    patch_strip = 1,
)
